# pyccb

./: README.md  pyproject.toml
examples/: conditionals.py  flags.py  functions.py  helloworld.py  lists.py  math.py  variables.py  while.py
pyccb/: __init__.py  __main__.py  generate.py  parser.py  utils.py
tests/: all.sh
