[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyccb"
version = "0.1.1"
description = "Python Compiler Collection for Bash"
readme = "README.md"
authors = [
    {name = "simplyrohan"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pyccb = "pyccb.__main__:main"

[project.urls]
Homepage = "https://github.com/simplyrohan/pyccb"
Repository = "https://github.com/simplyrohan/pyccb"